--- a/content/course_weeks/overview.qmd
+++ b/content/course_weeks/overview.qmd
@@ -27,13 +27,13 @@ editor:
 
 | Session | Date | Topic | Slides | Tutorial | Assignment
 | --- | --- | --- | --- | --- | --- |
-| 1 | April 15 & 16 | Introduction to Causal Inference | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/01_intro.html) | [{{< fa laptop >}}](week_01/week_1.html) | [{{< fa brands github >}}](https://classroom.github.com/a/qKNVakO4) |
-| 2 | April 22 & 21 | Graphical Causal Models | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/02_graphs.html) | [{{< fa laptop >}}](week_02/week_2.html) | [{{< fa brands github >}}](https://classroom.github.com/a/eNvelq2Z) |
-| 3 | April 29 & 30 | Randomized Experiments & Linear Regression | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/03_exper.html) | [{{< fa laptop >}}](week_03/week_3.html) | [{{< fa brands github >}}](https://classroom.github.com/a/Fnvwjrn_) |
-| 4 | May 6 & 7 | Matching | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/04_ob_conf.html) | [{{< fa laptop >}}](week_04/week_4.html) | [{{< fa brands github >}}](https://classroom.github.com/a/ZY_8r4KL) |
-| 5 | May 13 & 14 | Double Machine Learning | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/05_dml.html) | [{{< fa laptop >}}](week_05/week_5.html) | [{{< fa brands github >}}](https://classroom.github.com/a/m7oLFvnr) | 
+| 1 | April 15 & 16 | Introduction to Causal Inference | [{{< fa book-open >}}](https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/01_intro.html) | [{{< fa laptop >}}](week_01/week_1.html) | [{{< fa brands github >}}](https://classroom.github.com/a/qKNVakO4) |
+| 2 | April 22 & 21 | Graphical Causal Models | [{{< fa book-open >}}](https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/02_graphs.html) | [{{< fa laptop >}}](week_02/week_2.html) | [{{< fa brands github >}}](https://classroom.github.com/a/eNvelq2Z) |
+| 3 | April 29 & 30 | Randomized Experiments & Linear Regression | [{{< fa book-open >}}](https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/03_exper.html) | [{{< fa laptop >}}](week_03/week_3.html) | [{{< fa brands github >}}](https://classroom.github.com/a/Fnvwjrn_) |
+| 4 | May 6 & 7 | Matching | [{{< fa book-open >}}](https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/04_ob_conf.html) | [{{< fa laptop >}}](week_04/week_4.html) | [{{< fa brands github >}}](https://classroom.github.com/a/ZY_8r4KL) |
+| 5 | May 13 & 14 | Double Machine Learning | [{{< fa book-open >}}](https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/05_dml.html) | [{{< fa laptop >}}](week_05/week_5.html) | [{{< fa brands github >}}](https://classroom.github.com/a/m7oLFvnr) | 
 | - | May 20 & 21 | Holiday | - | - | - |
-| 6 | May 27 & 28 | Effect Heterogeneity | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
+| 6 | May 27 & 28 | Effect Heterogeneity | [{{< fa book-open >}}](https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/06_hte.html) | [{{< fa laptop >}}](week_05/week_6.html) | {{< fa brands github >}} |
 | 7 | June 3 & 4 | Unobserved Confounding & Instrumental Variables | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
 | 8 | June 10 & 11 | Difference-in-Difference | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
 | 9 | June 17 & 18 | Synthetic Control | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
