--- a/content/course_weeks/week_02/week_2.qmd
+++ b/content/course_weeks/week_02/week_2.qmd
@@ -44,7 +44,7 @@ source(paste0(here::here(), "/code/dag_theme.R"))
 
 ## Slides & Recap
 
-<iframe style="width: 100%; height: 45vw; max-height: 50vh;" frameborder="0" allowfullscreen src="https://jschwarz.me/presentations/slides/02_graphs.html"></iframe>
+<iframe style="width: 100%; height: 45vw; max-height: 50vh;" frameborder="0" allowfullscreen src="https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/02_graphs.html"></iframe>
 
 In this chapter, we focus on the identification of causal effects with the help of graphical models, also known as **d**irected **a**cyclic **g**raphs (DAGs). By graphically modeling and leveraging your theoretical knowledge about the data-generating process, you will be able to understand when association is actually causation.
 
