--- a/content/course_weeks/week_06/week_6.qmd
+++ b/content/course_weeks/week_06/week_6.qmd
@@ -511,11 +511,11 @@ Accept the [**Week 6 - Assignment**](https://classroom.github.com/a/oPhGwOmd) an
 
 For the assignments you are going to use `music.rds`. Consider the following scenario: you are a data scientist at a music streaming company. Naturally, you’re keen to engage users for as long as possible and encourage them to become avid users of your streaming app. Your colleagues from the department responsible for recommendation algorithms have developed a new fancy algorithm which aims to enhance the daily number of minutes of music listening by offering particularly well tailored recommendations. Following common practice of A/B testing, you randomly assign your users into a treatment group (new algorithm) and a control group (no new algorithm). The outcome variable is `minutes_spent` and the treatment variable is `new_algo`.
 
-1. As you've learned, regress the outcome on the treatment and interpret the estimated ATE.
+1. As you've learned, in an A/B test you just need to regress the outcome on the treatment. Follow that and interpret the estimated ATE.
 
-2. Take a look at the two formula rearrangements for the R-learner. Based on both rearrangements, construct what is needed to run the final regression. Prove the equivalence of both rearrangements by comparing both the coefficients and individual treatment effects from both approaches.
+2. Take a look at the two formula rearrangements for the R-learner. For both approaches, construct the predicted treatment effects and coefficients and show the equivalence.
 
-3. Using the `DoubleML` package, run the DR-learner and check for CATEs based on your available covariates. Do you find heterogeneous treatment effects? If yes, interpret them (also with regard to your coefficient in the first task. Please note that to extract the doubly robust $\tilde{\tau_i}_{\text{ATE}}$, you need to access `dr_mod$psi_b`.
+3. Using the `DoubleML` package, run the DR-learner and check for CATEs based on your available covariates. Do you find heterogeneous treatment effects? If yes, interpret them (also with regard to your coefficient in the first task). Please note that to extract the doubly robust $\tilde{\tau_i}_{\text{ATE}}$, you need to access `dr_mod$psi_b`.
 
 4. For the covariate `app_usage_frequency`, use the package `np` to check for non-linear heterogeneous treatment effects. Check lecture slide 12 for more details. Discuss the result.
 :::
